[package]
name = "pulsar-rs-issue-194"
version = "0.1.0"
edition = "2021"
documentation = "https://github.com/streamnative/pulsar-rs/issues/194"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
pulsar = "6.1.0"
crossbeam= "0.8.2"
futures-core = "0.3.29"
futures = "0.3.29"
